--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
@@ -51,7 +49,7 @@
       <!-- Герой -->
       <div>
         <section class="hero">
-          <h1 class="hero-title">ЭФФЕКТИВНОЕ РЕШЕНИЕ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
+          <h1 class="hero-title">эффективное решение для вашего бизнеса</h1>
           <button class="btn" type="button">Заказать услугу</button>
         </section>
       </div>
@@ -157,8 +155,8 @@
         <a class="address link" href="https://goo.gl/maps/oTp4s3FLAec8Ka2x9"
           >г. Киев, пр-т Леси Украинки, 26</a
         ><br />
-        <a class="contacts link" href="mailto:info@example.com">info@example.com</a><br />
-        <a class="contacts link" href="tel:+380991111111">+380991111111</a>
+        <a class="contacts-footer link" href="mailto:info@example.com">info@example.com</a><br />
+        <a class="contacts-footer link" href="tel:+380991111111">+380991111111</a>
       </address>
     </footer>
   </body>
