--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
       integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
@@ -24,13 +26,13 @@
       <a href="" class="logo link"><span class="logo-blue">Web</span>Studio</a>
       <nav>
         <ul class="site-nav list">
-          <li>
+          <li class="site-nav-items">
             <a href="./index.html" class="link current">Студия</a>
           </li>
-          <li>
+          <li class="site-nav-items">
             <a href="./portfolio.html" class="link">Портфолио</a>
           </li>
-          <li>
+          <li class="site-nav-items">
             <a href="" class="link">Контакты</a>
           </li>
         </ul>
