Adds margin to links in footer portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -148,14 +148,23 @@
     <footer class="footer">
       <div class="conteiner">
         <div class="footer-block">
-          <a href="./index.html" class="logo link"><span class="logo-blue link">Web</span>Studio</a>
-          <address class="address-block">
-            <a class="address link" href="https://goo.gl/maps/oTp4s3FLAec8Ka2x9">г. Киев, пр-т Леси Украинки, 26</a><br />
-            <a class="contacts-footer link" href="mailto:info@example.com">info@example.com</a><br />
-            <a class="contacts-footer link" href="tel:+380991111111">+380991111111</a>
-          </address>
+          <div class="footer-logo">
+            <a href="./index.html" class="logo link"><span class="logo-blue link">Web</span>Studio</a>
+          </div>
+    
+          <div class="address-block">
+            <div class="contacts-address">
+              <a class="address link" href="https://goo.gl/maps/oTp4s3FLAec8Ka2x9">г. Киев, пр-т Леси Украинки, 26</a>
+            </div>
+            <div class="contacts-email">
+              <a class="contacts-footer link" href="mailto:info@example.com">info@example.com</a>
+            </div>
+            <div class="contacts-tel">
+              <a class="contacts-footer link" href="tel:+380991111111">+380991111111</a>
+            </div>
+          </div>
+    
         </div>
-      </div>
     </footer>
   </body>
 </html>
